# OpenDTAM

./: .gitignore
Cpp/: CMakeLists.txt  ImageFrag.glsl  ImageVert.glsl  densedata.cpp  densedata.h  densepointcloudfrag.glsl  densevert.glsl  depthmapstereo.cpp  depthmapstereo.h  drawimage.cpp  drawimage.h  opendtamdemo.cpp  projectdata.cpp  projectdata.h  shaders.qrc  testprog.cpp
Cpp/CostVolume/: CostVolume.cpp  CostVolume.cu  optimizer.part.cpp
Cpp/CostVolume/utils/: reprojectCloud.cpp
Cpp/DepthmapDenoiseWeightedHuber/: DepthmapDenoiseWeightedHuber.cpp
Cpp/Optimizer/: Optimizer.cpp  Optimizer.cu
Cpp/POV-Ray/: computeTpov_cam.cpp
Cpp/Scheduler/: Frame.hpp  ImplMutex.cpp  ImplMutex.hpp  SynchronizedBuffer.hpp  ucv.cpp
Cpp/Visualization3D/: CMakeLists.txt  buffermanager.cpp  buffermanager.h  gl_hud.cpp  gl_hud.h  offscreenrenderer.cpp  offscreenrenderer.h  openglcamera.cpp  openglcamera.h  openglhelper.h  trackballcamera.cpp  trackballcamera.h
Cpp/external_includes/: openglincludes.h
Cpp/link_libraries/: libGVars3.so.0  libGVars3.so.0.6  libGVars3_headless.so.0  libGVars3_headless.so.0.6  libcvd.so.0  libcvd_debug.so.0  libglfw.so.3.1
Cpp/ptam/: ARDriver.cc  ATANCamera.cc  ATANCamera.h  CMakeLists.txt  CalibCornerPatch.h  CalibImage.h  CameraCalibrator.cc  GLWindow2.cc  KeyFrame.cc  KeyFrame.h  MapMaker.cc  MapMaker.h  MapPoint.h  MapViewer.cc  MapViewer.h  OpenGL.h  PatchFinder.cc  SmallBlurryImage.cc  SmallBlurryImage.h  System.cc  Tracker.cc  Tracker.h  VideoSourceOpencv.cpp  VideoSource_Linux_OpenCV.cc
Cpp/utils/: ImplThreadLaunch.cpp  ImplThreadLaunch.hpp
